// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// Package tokens provides object in storage for tokens.
package tokens;

option go_package = "github.com/GoogleCloudPlatform/healthcare-federated-access-services/proto/store/tokens";

// PendingDeleteToken stores delete_time for the pending delete token. Use the
// token id as the key of the entry.
message PendingDeleteToken {
  // timestamp of user request delete the token.
  int64 delete_time = 1;
}
